--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -15,7 +15,7 @@
   }
 
   .menu-before {
-    @apply absolute -left-8 top-1/2 -translate-y-1/2 h-8 w-1 bg-success content-[''];
+    @apply absolute left-0 top-1/2 -translate-y-1/2 h-8 w-1 bg-success content-[''];
   }
 
   .btn {
